--- a/instagram_killer/main_app/templates/main_app/post.html
+++ b/instagram_killer/main_app/templates/main_app/post.html
@@ -1,1 +1,15 @@
-{{post}}
+{% extends "main_app/base.html" %}
+
+{% block content %}
+    {% if post.id %}
+        <form action="{% url 'post_details' post.id %}" method="POST">{% csrf_token %}
+            {{ form }}
+            <button type="submit">Update</button>
+        </form>
+    {% else %}
+        <form action="{% url 'post' %}" method="POST">{% csrf_token %}
+            {{ form }}
+            <button type="submit">Create</button>
+        </form>
+    {% endif %}
+{% endblock content %}
